--- a/resource-round/layouts/layout.xml
+++ b/resource-round/layouts/layout.xml
@@ -1,20 +1,14 @@
-<layout id="MainLayout">
-	<label id="id_label0" x="65" y="15" text="Dec 12 2020" color="Graphics.COLOR_WHITE" font="Graphics.FONT_SMALL"/>
-    
-    <drawable id="id_line2" class="CustomLine" />
- 
-
-    <label id="id_label1" x="35" y="40" text="9:32 AM PST / 2.0 kt Round" color="Graphics.COLOR_WHITE" font="Graphics.FONT_TINY" justification="Graphics.TEXT_JUSTIFY_LEFT" />
-    <bitmap id="id_img1" x="15" y="40" filename="../drawables/up.png" />
-    <label id="id_label2" x="35" y="65" text="9:32 AM PST / 2.0 kt" color="Graphics.COLOR_WHITE" font="Graphics.FONT_TINY" justification="Graphics.TEXT_JUSTIFY_LEFT" />
-    <bitmap id="id_img2" x="15" y="65" filename="../drawables/up.png" />
-    <label id="id_label3" x="35" y="90" text="9:32 AM PST / 2.0 kt" color="Graphics.COLOR_WHITE" font="Graphics.FONT_TINY" justification="Graphics.TEXT_JUSTIFY_LEFT" />
-    <bitmap id="id_img3" x="15" y="90" filename="../drawables/up.png" />
-    <label id="id_label4" x="35" y="115" text="9:32 AM PST / 2.0 kt" color="Graphics.COLOR_WHITE" font="Graphics.FONT_TINY" justification="Graphics.TEXT_JUSTIFY_LEFT" />
-    <bitmap id="id_img4" x="15" y="115" filename="../drawables/up.png" />
-    <label id="id_label5" x="35" y="140" text="9:32 AM PST / 2.0 kt" color="Graphics.COLOR_WHITE" font="Graphics.FONT_TINY" justification="Graphics.TEXT_JUSTIFY_LEFT" />
-    <bitmap id="id_img5" x="15" y="140" filename="../drawables/up.png" />
-    <label id="id_label6" x="35" y="165" text="9:32 AM PST / 2.0 kt" color="Graphics.COLOR_WHITE" font="Graphics.FONT_TINY" justification="Graphics.TEXT_JUSTIFY_LEFT" />
-    <bitmap id="id_img6" x="15" y="165" filename="../drawables/up.png" />
-    
+<layout id="MainLayout" background="Graphics.COLOR_BLACK">
+	<label id="id_hours" x="110" y="0" text="23:59" color="Graphics.COLOR_WHITE" font="Graphics.FONT_SMALL" justification="Graphics.TEXT_JUSTIFY_CENTER"/>
+	<label id="id_date" x="110" y="15" text="Dec 12 2020" color="Graphics.COLOR_WHITE" font="Graphics.FONT_SMALL" justification="Graphics.TEXT_JUSTIFY_CENTER"/>
+	<drawable id="id_line2" class="CustomLine" />
+    <label id="id_label1" x="25" y="36" text="9:32 AM PST / 2.0 kt Semi" color="Graphics.COLOR_WHITE" font="Graphics.FONT_SMALL" justification="Graphics.TEXT_JUSTIFY_LEFT" />
+    <label id="id_label2" x="25" y="51" text="9:32 AM PST / 2.0 kt 456" color="Graphics.COLOR_WHITE" font="Graphics.FONT_SMALL" justification="Graphics.TEXT_JUSTIFY_LEFT" />
+    <label id="id_label3" x="25" y="66" text="9:32 AM PST / 2.0 kt 789" color="Graphics.COLOR_WHITE" font="Graphics.FONT_SMALL" justification="Graphics.TEXT_JUSTIFY_LEFT" />
+    <label id="id_label4" x="25" y="81" text="9:32 AM PST / 2.0 kt 789" color="Graphics.COLOR_WHITE" font="Graphics.FONT_SMALL" justification="Graphics.TEXT_JUSTIFY_LEFT" />
+    <label id="id_label5" x="25" y="96" text="9:32 AM PST / 2.0 kt 789" color="Graphics.COLOR_WHITE" font="Graphics.FONT_SMALL" justification="Graphics.TEXT_JUSTIFY_LEFT" />
+    <label id="id_label6" x="25" y="111" text="9:32 AM PST / 2.0 kt 789" color="Graphics.COLOR_WHITE" font="Graphics.FONT_SMALL" justification="Graphics.TEXT_JUSTIFY_LEFT" />
+    <label id="id_label7" x="25" y="126" text="9:32 AM PST / 2.0 kt 789" color="Graphics.COLOR_WHITE" font="Graphics.FONT_SMALL" justification="Graphics.TEXT_JUSTIFY_LEFT" />
+    <label id="id_label8" x="25" y="141" text="9:32 AM PST / 2.0 kt 789" color="Graphics.COLOR_WHITE" font="Graphics.FONT_SMALL" justification="Graphics.TEXT_JUSTIFY_LEFT" />
+    <label id="id_country" x="110" y="160" text="Vung Tau" color="Graphics.COLOR_WHITE" font="Graphics.FONT_SMALL" justification="Graphics.TEXT_JUSTIFY_CENTER"/>
 </layout>
