--- a/fr235-resources/layouts/layout.xml
+++ b/fr235-resources/layouts/layout.xml
@@ -10,5 +10,5 @@
     <label id="id_label6" x="25" y="111" text="9:32 AM PST / 2.0 kt 789" color="Graphics.COLOR_WHITE" font="Graphics.FONT_SMALL" justification="Graphics.TEXT_JUSTIFY_LEFT" />
     <label id="id_label7" x="25" y="126" text="9:32 AM PST / 2.0 kt 789" color="Graphics.COLOR_WHITE" font="Graphics.FONT_SMALL" justification="Graphics.TEXT_JUSTIFY_LEFT" />
     <label id="id_label8" x="25" y="141" text="9:32 AM PST / 2.0 kt 789" color="Graphics.COLOR_WHITE" font="Graphics.FONT_SMALL" justification="Graphics.TEXT_JUSTIFY_LEFT" />
-    <label id="id_country" x="110" y="160" text="Cur. Date: Jun 03 2019" color="Graphics.COLOR_WHITE" font="Graphics.FONT_SMALL" justification="Graphics.TEXT_JUSTIFY_CENTER"/>
+    <label id="id_currDate" x="110" y="160" text="Cur.Date: Jun 03 2019" color="Graphics.COLOR_WHITE" font="Graphics.FONT_SMALL" justification="Graphics.TEXT_JUSTIFY_CENTER"/>
 </layout>
