--- a/fenix3-resources/layouts/LocationInfoLayout.xml
+++ b/fenix3-resources/layouts/LocationInfoLayout.xml
@@ -4,4 +4,5 @@
     <label id="id_lat" x="25" y="66" color="Graphics.COLOR_WHITE" justification="Graphics.TEXT_JUSTIFY_LEFT" />
     <label id="id_long" x="25" y="88" color="Graphics.COLOR_WHITE" justification="Graphics.TEXT_JUSTIFY_LEFT" />
     <label id="id_code" x="25" y="103" color="Graphics.COLOR_WHITE" justification="Graphics.TEXT_JUSTIFY_LEFT" />
+    <drawable id="id_line2" class="CustomLineRoundFace" />
 </layout>
