--- a/fenix3-resources/layouts/LocationInfoLayout.xml
+++ b/fenix3-resources/layouts/LocationInfoLayout.xml
@@ -1,8 +1,7 @@
 <layout id="LocationInfoLayout" background="Graphics.COLOR_BLACK">
-	<label id="id_location_info" x="125" y="15" text="@Strings.LocationInfo" color="Graphics.COLOR_WHITE" justification="Graphics.TEXT_JUSTIFY_CENTER"/>
-    <label id="id_name" x="25" y="51" color="Graphics.COLOR_WHITE" justification="Graphics.TEXT_JUSTIFY_LEFT" />
-    <label id="id_lat" x="25" y="66" color="Graphics.COLOR_WHITE" justification="Graphics.TEXT_JUSTIFY_LEFT" />
-    <label id="id_long" x="25" y="88" color="Graphics.COLOR_WHITE" justification="Graphics.TEXT_JUSTIFY_LEFT" />
-    <label id="id_code" x="25" y="103" color="Graphics.COLOR_WHITE" justification="Graphics.TEXT_JUSTIFY_LEFT" />
-    <drawable id="id_line2" class="CustomLineRoundFace" />
+	<label id="id_location_info" text="@Strings.LocationInfo" color="Graphics.COLOR_WHITE" justification="Graphics.TEXT_JUSTIFY_CENTER"/>
+    <label id="id_name" color="Graphics.COLOR_WHITE" justification="Graphics.TEXT_JUSTIFY_LEFT" />
+    <label id="id_lat" color="Graphics.COLOR_WHITE" justification="Graphics.TEXT_JUSTIFY_LEFT" />
+    <label id="id_long" color="Graphics.COLOR_WHITE" justification="Graphics.TEXT_JUSTIFY_LEFT" />
+    <label id="id_code" color="Graphics.COLOR_WHITE" justification="Graphics.TEXT_JUSTIFY_LEFT" />
 </layout>
